fix spacing surrounding illo

--- a/src/assets/styles/_page.scss
+++ b/src/assets/styles/_page.scss
@@ -42,7 +42,7 @@
         }
         & .experience__illustration {
           order: 1;
-          margin: 24px 0;
+          margin: 72px 0 24px 0;
         }
       }
 
@@ -55,7 +55,7 @@
         }
         & .experience__illustration {
           order: 1;
-          margin: 24px 0;
+          margin: 72px 0 24px 0;
         }
       }
     }
